# OC

./: README.md
KP/: ClientProgram.cpp  CommonMutex.cpp  CommonMutex.h  Makefile  MappedFile.h  PlayerAndGame.h  ServerProgram.cpp  client  server
lab2/: child1  child1.c  child2  child2.c  makefile  parent  parent.c  strace.txt
lab3/: a.out  main.c  main16.c  Отчет по ЛР3 Михеева 207Б.docx
lab4/: child1.c  child2.c  makefile  mltshr.h  parent.c  strace.txt
lab5/: Makefile  Makefile.txt  libary1.cpp  libary2.cpp  m1  m2  prog1.cpp  prog2.cpp  res.txt  Отчет по ЛР5 Михеева 207Б.docx
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  lab_api.cpp  lab_api.hpp  manager  manager.cpp  res.txt  tree.cpp  tree.hpp  worker  worker.cpp  Отчет по ЛР6 Михеева 207Б.docx
